Bugfix: Fix dark mode and themes not loading with static files service (#428)

--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -2,12 +2,12 @@
 
 @import "tw-animate-css";
 
-@import "./styles/themes/default.css";
+@import "./styles/default.css";
 
 @custom-variant dark (&:is(.dark *));
 
 body {
-  @apply m-0;
+  @apply m-0 bg-background text-foreground;
   font-family:
     -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
